--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: # "/reinhardt-reunion-website-jekyll" # the subpath of your site, e.g. /blog
-url: # "https://katherinemichel.github.io/reinhardt-reunion-website-jekyll" # the base hostname & protocol for your site
+baseurl: "/reinhardt-reunion-website-jekyll" # the subpath of your site, e.g. /blog
+url: "https://katherinemichel.github.io/reinhardt-reunion-website-jekyll" # the base hostname & protocol for your site
 twitter_username: katimichel
 github_username:  KatherineMichel
 
