--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ twitter_username: katimichel
 github_username:  KatherineMichel
 
 # Include additional directory
-include: ["_gallery"]
+include: ["_photos"]
 
 # Build settings
 markdown: kramdown
