--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ github_username:  KatherineMichel
 collections:
   photos:
     output: true
+    permalink: /photos/:path/
 
 # Build settings
 markdown: kramdown
